# libav-cpp

./: .clang-format  .clang-tidy  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  meson.build
.devcontainer/: Dockerfile  devcontainer.json
include/av-cpp/: avutil.hpp  def.h
include/av-cpp/avutil/: buffer.hpp  common.hpp  dict.hpp  display.hpp  error.hpp  frame.hpp  rational.hpp
src/: meson.build
src/avutil/: avutil.cpp  buffer.cpp  common.cpp  error.cpp  frame.cpp  rational.cpp
